<?xml version="1.0"?>
<package format="3">
  <name>f450_bridges</name>
  <version>0.1.0</version>
  <description>F450 trajectory display via MAVROS (ROS 2) in RViz2</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <exec_depend>mavros</exec_depend>
</package>
