<?xml version="1.0"?>
<package format="3">
  <name>f450_description</name>
  <version>0.1.0</version>
  <description>URDF/Xacro and visualization assets for an F450 quadcopter</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>

  <export/>
</package>
